<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StorageApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sqlite">SQLiteActivity</string>
    <string name="sqlite">SQLite</string>
    <string name="close">Close</string>
    <string name="pref">Preferences</string>
    <string name="save">Save</string>
    <string name="title_activity_pref">PrefActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_saved_list">SavedListActivity</string>
    <item name="id" type="id"/>
    <string name="preference_storage_view">Preference Storage View</string>
    <string name="sqlite_storage_view">SQLite Storage View</string>
    <string name="count">Count</string>
    <string name="book_details">Book Details</string>
    <string name="message">Enter your Message</string>
    <string name="blog_message">Blog Message</string>
    <string name="author">Android Book Author</string>
    <string name="maxchar">Max. 70 Characters</string>
    <string name="maxchar255">Max. 255 Characters Only</string>
    <string name="desc">Description</string>
    <string name="book">Android Book Name</string>
        
    

</resources>
