<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SQLiteActivity" >

     <EditText
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/blog_message"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/message"
         android:maxLines="20"
         android:textSize="14sp" >

         <requestFocus />
     </EditText>

     <TextView
         android:id="@+id/blog_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/message"
         android:layout_alignParentTop="true"
         android:layout_margin="6dip"
         android:gravity="right"
         android:text="@string/blog_message"
         android:textSize="17sp"
         android:textStyle="bold" />

     <Button
         android:id="@+id/button_sqlite_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/message"
         android:layout_below="@+id/message"
         android:layout_marginTop="24dp"
         android:text="@string/close" />

     <Button
         android:id="@+id/button_sqlite_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/message"
         android:layout_below="@+id/message"
                  android:layout_marginTop="24dp"
         
         android:text="@string/save" />

</RelativeLayout>
