<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ActionBarSherlock" >

    <LinearLayout
        android:id="@+id/blog_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/book"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/book"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/book_editText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/maxchar"
            android:maxLength="70"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/book_author_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/author"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/author"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/author_editText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/maxchar"
            android:maxLength="70"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/book_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/desc"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="0.3"
            android:gravity="center_vertical|right"
            android:text="@string/desc"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/desc_editText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/maxchar255"
            android:maxLength="255"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_pref_save"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:text="@string/save"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_pref_close"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:text="@string/close"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>