<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity" >

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="18dp" >

        <Button
            android:id="@+id/button_pref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="6dp"
            android:text="@string/pref" />

        <Button
            android:id="@+id/button_sqlite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="6dp"
            android:text="@string/sqlite" />

    </RelativeLayout>

    <ListView
        android:id="@+id/storage_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="15dip"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:dividerHeight="1px" >
    </ListView>

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dip"
        android:text="@string/close" />

</LinearLayout>